[package]
name = "sdf-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
# tufa = { version = "0.1.2", features = ["interactive"] }
tufa = { git = "https://github.com/connorslade/tufa", features = ["interactive"] }
encase = { version = "0.11.1", features = ["nalgebra"] }
anyhow = "1.0.99"
